# TruthSeeker

./: .gitignore  README.md  torun.md
Steganography/: requirements.txt  server.py
app_scaffold/: Cargo.toml
app_scaffold/contracts/: Cargo.toml  build.rs  metadata.rs
app_scaffold/contracts/contract1/: contract1.img  contract1.txt
app_scaffold/contracts/contract2/: contract2.img  contract2.txt
app_scaffold/contracts/zkpassport/: Cargo.toml  zkpassport.img  zkpassport.txt
app_scaffold/contracts/zkpassport/src/: lib.rs  main.rs
app_scaffold/contracts/zkpassport/src/client/: mod.rs  tx_executor_handler.rs
app_scaffold/server/: Cargo.toml
app_scaffold/server/src/: app.rs  main.rs
frontend/: package-lock.json  package.json
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/camera/: page.tsx
frontend/app/components/: ClientWalletProvider.tsx  WalletAwareHome.tsx  WalletProvider.tsx
frontend/app/dashboard/: page.tsx
frontend/app/hyli-verify/: page.tsx
frontend/app/pinata-test/: page.tsx
frontend/app/proof-process/: page.tsx
frontend/app/sandbox/: page.tsx
frontend/app/services/: ContractService.ts
frontend/app/steganography/: page.tsx
frontend/app/success/: page.tsx
frontend/app/tier-selection/: page.tsx
frontend/app/truth-discovery/: page.tsx
frontend/app/zkpass/: page.tsx
frontend/components/: BackendStatus.tsx  CameraAnimation.tsx  MorphingAnimation.tsx  TierVisualization.tsx
frontend/lib/: backend-service.ts  pinata-service.ts
manual_Scaffold/front/: ZKPASSPORT_IMPLEMENTATION.md  package-lock.json  package.json
(+10 files in other folders)
