[package]
name = "contracts"
edition = { workspace = true }
rust-version = "1.81"

[lib]
path = "metadata.rs"

[dependencies]
sdk = { workspace = true }
contract1 = { workspace = true, features = ["client"] }
contract2 = { workspace = true, features = ["client"] }
zkpassport = { workspace = true, features = ["client"] }  # Add this back

[build-dependencies]
risc0-build = { version = "2.0.2", optional = true }

[package.metadata.risc0]
methods = ["contract1", "contract2", "zkpassport"]

[features]
build = ["dep:risc0-build"]
nonreproducible = ["build", "all"]

all = ["contract1", "contract2", "zkpassport"]
contract1 = []
contract2 = []
zkpassport = []